[gd_scene load_steps=17 format=2]

[ext_resource path="res://plant/textures/pot.png" type="Texture" id=1]
[ext_resource path="res://plant/pot.gd" type="Script" id=2]
[ext_resource path="res://plant/plant.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/theme.tres" type="Theme" id=4]
[ext_resource path="res://skeleton/textures/skeleton_part.png" type="Texture" id=5]
[ext_resource path="res://audio/assets/plant.ogg" type="AudioStream" id=6]
[ext_resource path="res://plant/textures/arrow.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 4.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Plant:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Plant:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "plant"
length = 1.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../Plant:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 1.5 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -24 ), Vector2( 0, -13 ), Vector2( 0, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Plant:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("../AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.02 )
}

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "blink"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.17, 0.35, 0.52 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "point"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -17 ), Vector2( 0, -14 ) ]
}

[node name="Pot" type="StaticBody2D" groups=["pot"]]
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )

[node name="Pot" type="Sprite" parent="."]
position = Vector2( 0, -7 )
texture = ExtResource( 1 )

[node name="Plant" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -4.5 )
shape = SubResource( 5 )

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
visible = false
position = Vector2( 0, -4.5 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Pot")
anims/RESET = SubResource( 1 )
anims/plant = SubResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = -10.0
margin_top = -15.0
margin_right = 10.0
margin_bottom = 5.0
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
action_mode = 0
flat = true

[node name="MissingPartsLabel" type="Control" parent="."]
margin_left = -12.0
margin_top = -19.0
margin_right = 12.0
mouse_filter = 2

[node name="Container" type="HBoxContainer" parent="MissingPartsLabel"]
visible = false
margin_right = 16.0
margin_bottom = 8.0
mouse_filter = 2
custom_constants/separation = 0

[node name="PartsSprite" type="TextureRect" parent="MissingPartsLabel/Container"]
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 2
texture = SubResource( 4 )
stretch_mode = 4

[node name="Label" type="Label" parent="MissingPartsLabel/Container"]
margin_left = 8.0
margin_right = 24.0
margin_bottom = 8.0
theme = ExtResource( 4 )
text = "x0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MissingPartsLabel/Container"]
autoplay = "blink"
anims/RESET = SubResource( 7 )
anims/blink = SubResource( 6 )

[node name="ArrowSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -16 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArrowSprite"]
autoplay = "point"
anims/RESET = SubResource( 8 )
anims/point = SubResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Effects"

[node name="NoticeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="NoticeTimer" to="." method="_on_notice_timeout"]
